--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Olaoluwayemi Rasheed</h1>
+            <div><a href="mailto:rasholayemi@gmail.com">rasholayemi@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/yemiemy">@yemiemy</a></li>
+                    <li><a href="https://linkedin.com/in/olaoluwayemi-rasheed-059216177/">@olaoluwayemi-rasheed-059216177/</a></li>
+                    <li><a href="https://twitter.com/YemiTumininu">@YemiTumininu</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        University of Lagos
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA: 3.96</li>
+                        <li>2017-2023</li>
                     </ul>
                 </div>
             </section>
